# archery

./: archery.cabal  cabal.project  default-nix.nix  shell-musl.nix  shell.nix
.github/workflows/: nix.yml.disabled
examples/test/Data/Function/: IsPalindromeSpec.hs
lib/Control/Category/: Choice.hs  Numeric.hs
lib/Data/Code/: Bash.hs  C.hs  CPP.hs  Generic.hs  Haskell.hs  JS.hs  PHP.hs  TS.hs
lib/Data/Function/Free/: Abstract.hs
src/: write-examples.hs
