cabal-version:      3.14

-- Newer versions complain
name:               archery
version:            0.2.0.0

-- synopsis:
description:        Playing with arrows 
homepage:           https://github.com/emberdart/archery#readme
license:            AGPL-3.0-only

-- license-file:        LICENSE
author:             Ember Dart
maintainer:         cabal@emberdart.co.uk
copyright:          2019 Ember Dart
category:           Web
build-type:         Simple
extra-source-files: README.md

common shared-properties-base
  hs-source-dirs:     src
  default-language:   GHC2024
  default-extensions:
    NoGeneralisedNewtypeDeriving
    UnicodeSyntax

  ghcjs-options:      -dedupe

common shared-properties-unsafe
  import:             shared-properties-base

  if !arch(wasm32)
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

  ghc-options:
    -Weverything -Wno-implicit-prelude -Wno-inferred-safe-imports
    -Wno-missing-deriving-strategies -Wno-missing-export-lists
    -Wno-missing-import-lists -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-role-annotations
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-unrecognised-warning-flags -Werror -haddock

  build-depends:      base ^>=4.22
  default-extensions: UnicodeSyntax

common shared-properties-safe
  import:             shared-properties-unsafe
  default-extensions:
    NoGeneralizedNewtypeDeriving
    Safe
    UnicodeSyntax

common shared-properties-nobase
  import:             shared-properties-base

  if !arch(wasm32)
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

  ghc-options:
    -Weverything -Wno-implicit-prelude -Wno-inferred-safe-imports
    -Wno-missing-deriving-strategies -Wno-missing-export-lists
    -Wno-missing-import-lists -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-role-annotations
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-unrecognised-warning-flags -Werror -haddock

  default-extensions: UnicodeSyntax

-- TODO: unsafe?
library
  import:             shared-properties-base
  ghc-options:
    -Weverything -Wno-implicit-prelude -Wno-inferred-safe-imports
    -Wno-missing-deriving-strategies -Wno-missing-export-lists
    -Wno-missing-import-lists -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-role-annotations
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-unrecognised-warning-flags -Werror -haddock
    -Wno-unused-packages
    -- todo remove above

  default-extensions: UnicodeSyntax
  hs-source-dirs:     lib
  build-depends:
    , aeson       ^>=2.3.0
    , base        ^>=4.22
    , bytestring  ^>=0.12.2
    , categories ^>=1.0.7
    , constrained-categories ^>=0.4.2
    , containers  ^>=0.8
    , data-category ^>=0.11
    , file-io     ^>=0.1.4
    , filepath    ^>=1.5.4
    , lens        ^>=5.3.6
    , process     ^>=1.6.25
    , scientific  ^>=0.3.8.1
    , text        ^>=2.1.2

  exposed-modules:
    Control.Category.Apply
    Control.Category.Bracket
    Control.Category.Cartesian
    Control.Category.Choice
    Control.Category.Cocartesian
    Control.Category.Cochoice
    Control.Category.Compile.Imports
    Control.Category.Compile.Longhand
    Control.Category.Compile.Shorthand
    Control.Category.Costrong
    Control.Category.Curry
    Control.Category.Execute.Haskell.Imports
    Control.Category.Execute.Haskell.Longhand
    Control.Category.Execute.Haskell.Shorthand
    Control.Category.Execute.JSON.Imports
    Control.Category.Execute.JSON.Longhand
    Control.Category.Execute.JSON.Shorthand
    Control.Category.Execute.Stdio.Imports
    Control.Category.Execute.Stdio.Longhand
    Control.Category.Execute.Stdio.Shorthand
    Control.Category.Interpret
    Control.Category.LambdaCalculus.BCKW
    Control.Category.LambdaCalculus.SKI
    Control.Category.Numeric
    Control.Category.Primitive.Bool
    Control.Category.Primitive.Console
    Control.Category.Primitive.Curried
    Control.Category.Primitive.Extra
    Control.Category.Primitive.File
    Control.Category.Primitive.String
    Control.Category.Strong
    Control.Category.Symmetric
    Data.Code.Bash
    Data.Code.C
    Data.Code.CPP
    Data.Code.Generic
    Data.Code.Haskell
    Data.Code.JS
    Data.Code.PHP
    Data.Code.Python
    Data.Code.TS
    Data.Function.Free.Abstract
    Data.Function.Free.LambdaCalculus.BCKW
    Data.Function.Free.LambdaCalculus.SKI
    Data.Function.Utilities
    Data.MapSet
    Data.Prims
    Data.PrimsIO
    Data.Render.Library.External.Imports
    Data.Render.Library.External.Longhand
    Data.Render.Library.External.Shorthand
    Data.Render.Library.Internal.Imports
    Data.Render.Library.Internal.Longhand
    Data.Render.Library.Internal.Shorthand
    Data.Render.Program.Imports
    Data.Render.Program.Longhand
    Data.Render.Program.Shorthand
    Data.Render.Statement.Longhand
    Data.Render.Statement.Shorthand
    Orphans
    System.Executable

-- Control.Category.Generic

executable write-examples
  import:         shared-properties-unsafe
  main-is:        write-examples.hs
  hs-source-dirs: examples/lib
  other-modules:
    Data.Function.Arrowy
    Data.Function.AskName
    Data.Function.CollatzStep
    Data.Function.Greet
    Data.Function.HelloWorld
    Data.Function.IsPalindrome
    Data.Function.ReverseInput
    Data.Person

  build-depends:
    , aeson       ^>=2.3.0
    , archery     ^>=0.2
    , base        ^>=4.22
    , bytestring  ^>=0.12.2
    , directory   ^>=1.3.9
    , filepath    ^>=1.5.4
    , text        ^>=2.1.2
    , yaml        ^>=0.11.11.2

test-suite test
  if (arch(javascript) || arch(wasm32))
    buildable: False

  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  default-language:   GHC2024
  default-extensions:
    NoGeneralizedNewtypeDeriving
    UnicodeSyntax

  build-depends:
    , aeson                     ^>=2.3.0
    , archery                   ^>=0.2
    , base                      ^>=4.22
    , bytestring                ^>=0.12.2
    , bytestring-aeson-orphans  ^>=0.1.0.2
    , directory                 ^>=1.3.9
    , filepath                  ^>=1.5.4
    , hspec                     ^>=2.11.15
    , QuickCheck                ^>=2.18
    , quickcheck-text           ^>=0.1.2.1
    , text                      ^>=2.1.2

  -- rather than quickcheck-instances
  other-modules:
    Control.Category.ApplySpec
    Control.Category.CartesianSpec
    Control.Category.ChoiceSpec
    Control.Category.CocartesianSpec
    Control.Category.CochoiceSpec
    Control.Category.CostrongSpec
    Control.Category.CurrySpec
    Control.Category.GenericSpec
    Control.Category.NumericSpec
    Control.Category.Primitive.BoolSpec
    Control.Category.Primitive.CurriedSpec
    Control.Category.Primitive.ExtraSpec
    Control.Category.Primitive.FileSpec
    Control.Category.Primitive.StringSpec
    Control.Category.StrongSpec
    Control.Category.SymmetricSpec
    Data.Code.HaskellSpec
    Data.Code.JSSpec
    Data.Code.PHPSpec
    Data.Function.Free.AbstractSpec
    Data.PrimsSpec
    Data.PrimsIOSpec

  build-tool-depends: hspec-discover:hspec-discover

test-suite test-examples
  if (arch(javascript) || arch(wasm32))
    buildable: False

  type:               exitcode-stdio-1.0
  hs-source-dirs:     examples/lib examples/test
  main-is:            Spec.hs
  default-language:   GHC2024
  default-extensions:
    NoGeneralizedNewtypeDeriving
    UnicodeSyntax

  build-depends:
    , aeson            ^>=2.3.0
    , archery          ^>=0.2
    , base             ^>=4.22
    , hspec            ^>=2.11.15
    , QuickCheck       ^>=2.18
    , quickcheck-text  ^>=0.1.2.1
    , text             ^>=2.1.2

  -- rather than quickcheck-instances
  other-modules:
    Data.Function.Arrowy
    Data.Function.ArrowySpec
    Data.Function.AskName
    Data.Function.CollatzStep
    Data.Function.CollatzStepSpec
    Data.Function.Greet
    Data.Function.GreetSpec
    Data.Function.HelloWorld
    Data.Function.IsPalindrome
    Data.Function.IsPalindromeSpec
    Data.Function.ReverseInput
    Data.Person
    Data.PersonSpec

  build-tool-depends: hspec-discover:hspec-discover
